--- a/model/client.yaml
+++ b/model/client.yaml
@@ -12,7 +12,7 @@ groups:
     attributes:
       - id: address
         type: string
-        brief: Client address - IP address or Unix domain socket name.
+        brief: Client address - domain name if available without reverse DNS lookup, otherwise IP address or Unix domain socket name.
         note: >
           When observed from the server side, and when communicating through an intermediary, `client.address` SHOULD represent
           the client address behind any intermediaries (e.g. proxies) if it's available.
@@ -26,7 +26,7 @@ groups:
           the client port behind any intermediaries (e.g. proxies) if it's available.
       - id: socket.address
         type: string
-        brief: Client address of the socket connection - IP address or Unix domain socket name.
+        brief: Client address of the immediate peer connection - domain name if available without reverse DNS lookup, otherwise IP address or Unix domain socket name.
         note: >
           When observed from the server side, this SHOULD represent the immediate client peer address.
 
