--- a/model/server.yaml
+++ b/model/server.yaml
@@ -24,21 +24,14 @@ groups:
           When observed from the client side, and when communicating through an intermediary, `server.port` SHOULD represent
           the server port behind any intermediaries (e.g. proxies) if it's available.
         examples: [80, 8080, 443]
-      - id: socket.domain
-        type: string
-        brief: Immediate server peer's domain name if available without reverse DNS lookup
-        examples: ['proxy.example.com']
-        note: Typically observed from the client side, and represents a proxy or other intermediary domain name.
-        requirement_level:
-          recommended: If different than `server.address`.
       - id: socket.address
         type: string
-        brief: Server address of the socket connection - IP address or Unix domain socket name.
+        brief: Server address of the immediate peer connection - domain name if available without reverse DNS lookup, otherwise IP address or Unix domain socket name.
         note: >
           When observed from the client side, this SHOULD represent the immediate server peer address.
 
           When observed from the server side, this SHOULD represent the physical server address.
-        examples: ['10.5.3.2']
+        examples: ['proxy.example.com', '10.5.3.2']
         requirement_level:
           recommended: If different than `server.address`.
       - id: socket.port
