Update renovate config

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -3,6 +3,9 @@
   "extends": [
     "config:recommended",
     "docker:pinDigests",
-    "helpers:pinGitHubActionDigests"
+    "helpers:pinGitHubActionDigestsToSemver"
+  ],
+  "labels": [
+    "dependencies"
   ]
 }
